Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8278479

RunThese test failure with +UseHeavyMonitors and +VerifyHeavyMonitors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3 P3
    • 20
    • 18
    • hotspot
    • b06
    • generic
    • generic

      Mach5 Tier3 with UseHeavyMonitors and VerifyHeavyMonitors forced true
      failed 19 tests:

      applications/runthese/RunThese30M.java

      # Internal Error (t:\workspace\open\src\hotspot\share\runtime/handles.hpp:71), pid=25688, tid=48320
      # assert(_handle != 0LL) failed: resolving NULL handle

      <snip>

      Current thread (0x00000266dc2df7b0): JavaThread "javasoft.sqe.tests.api.java.lang.ClassNotFoundException.ClassNotFoundExcTests " daemon [_thread_in_vm, id=48320, stack(0x000000c541500000,0x000000c541600000)]

      Stack: [0x000000c541500000,0x000000c541600000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xbb1a51] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
      V [jvm.dll+0xdf16fe] VMError::report+0x101e (vmError.cpp:828)
      V [jvm.dll+0xdf30fe] VMError::report_and_die+0x7fe (vmError.cpp:1656)
      V [jvm.dll+0xdf3884] VMError::report_and_die+0x64 (vmError.cpp:1437)
      V [jvm.dll+0x5329f7] report_vm_error+0xb7 (debug.cpp:280)
      V [jvm.dll+0xd1f754] ObjectSynchronizer::enter+0x44 (synchronizer.cpp:435)
      V [jvm.dll+0xc7517f] SharedRuntime::monitor_enter_helper+0x1ff (sharedRuntime.cpp:2124)
      V [jvm.dll+0x3e0b18] Runtime1::monitorenter+0x168 (c1_Runtime1.cpp:747)
      C 0x00000266e6662f57

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~RuntimeStub::monitorenter_nofpu Runtime1 stub
      J 34362 c1 java.lang.Throwable.printStackTrace(Ljava/lang/Throwable$PrintStreamOrWriter;)V java.base@18-internal (177 bytes) @ 0x00000266e6d3bb2e [0x00000266e6d3a9e0+0x000000000000114e]
      j java.lang.Throwable.printStackTrace(Ljava/io/PrintStream;)V+9 java.base@18-internal
      j javasoft.sqe.tests.api.java.lang.ClassNotFoundException.ClassNotFoundExcTests.ClassNotFoundException0008()Ljavasoft/sqe/javatest/Status;+12
      j java.lang.invoke.DirectMethodHandle$Holder.invokeVirtual(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+10 java.base@18-internal
      J 33052 c2 java.lang.invoke.LambdaForm$MH+0x0000000800c08000.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@18-internal (35 bytes) @ 0x00000266ee48ffd4 [0x00000266ee48ff20+0x00000000000000b4]
      J 26417 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@18-internal (108 bytes) @ 0x00000266ee13f9d8 [0x00000266ee13f560+0x0000000000000478]
      j javasoft.sqe.javatest.lib.MultiTest.invokeTestCase(Ljava/lang/reflect/Method;)Ljavasoft/sqe/javatest/Status;+8
      j javasoft.sqe.javatest.lib.MultiTest.run([Ljava/lang/String;Ljava/io/PrintWriter;Ljava/io/PrintWriter;)Ljavasoft/sqe/javatest/Status;+139
      j javasoft.sqe.javatest.lib.MultiTest.run([Ljava/lang/String;Ljava/io/PrintStream;Ljava/io/PrintStream;)Ljavasoft/sqe/javatest/Status;+46
      j javasoft.sqe.tests.api.java.lang.ClassNotFoundException.ClassNotFoundExcTests.main([Ljava/lang/String;)V+16
      j java.lang.invoke.LambdaForm$DMH+0x0000000800c03400.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V+10 java.base@18-internal
      j java.lang.invoke.LambdaForm$MH+0x0000000800c8dc00.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+33 java.base@18-internal
      J 26417 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@18-internal (108 bytes) @ 0x00000266ee13f928 [0x00000266ee13f560+0x00000000000003c8]
      j applications.kitchensink.process.stress.modules.JckStressModule$TestRunner$1.run()V+9
      v ~StubRoutines::call_stub

            coleenp Coleen Phillimore
            rkennke Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: