8278479: RunThese test failure with +UseHeavyMonitors and +VerifyHeavyMonitors