src/hotspot/cpu/ppc/c1_LIRAssembler_ppc.cpp
@@ -2697,6 +2697,11 @@ void LIR_Assembler::emit_lock(LIR_OpLock* op) {
       //       simpler and requires less duplicated code - additionally, the
       //       slow locking code is the same in either case which simplifies
       //       debugging.
+      if (op->info() != NULL) {
+        int null_check_offset = __ offset();
+        __ null_check(obj);
+        add_debug_info_for_null_check(null_check_offset, op->info());
+      }
       __ b(*op->stub()->entry());
     }
   } else {
