src/hotspot/share/runtime/globals.hpp
@@ -1066,11 +1066,11 @@ const intx ObjectAlignmentInBytes = 8;
   product(bool, ErrorFileToStdout, false,                                   \
           "If true, error data is printed to stdout instead of a file")     \
                                                                             \
-  develop(bool, UseHeavyMonitors, false,                                    \
+  develop(bool, UseHeavyMonitors, true,                                     \
           "(Deprecated) Use heavyweight instead of lightweight Java "       \
           "monitors")                                                       \
                                                                             \
-  develop(bool, VerifyHeavyMonitors, false,                                 \
+  develop(bool, VerifyHeavyMonitors, true,                                  \
           "Checks that no stack locking happens when using "                \
           "+UseHeavyMonitors")                                              \
                                                                             \
